--- a/Project/Waterfall PRJ/Waterfall PRJ.csproj
+++ b/Project/Waterfall PRJ/Waterfall PRJ.csproj
@@ -76,11 +76,11 @@
     <Compile Include="LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="EmployeeInfoForm.cs">
+    <Compile Include="EmployeeAddingForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="EmployeeInfoForm.Designer.cs">
-      <DependentUpon>EmployeeInfoForm.cs</DependentUpon>
+    <Compile Include="EmployeeAddingForm.Designer.cs">
+      <DependentUpon>EmployeeAddingForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
@@ -93,8 +93,8 @@
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="EmployeeInfoForm.resx">
-      <DependentUpon>EmployeeInfoForm.cs</DependentUpon>
+    <EmbeddedResource Include="EmployeeAddingForm.resx">
+      <DependentUpon>EmployeeAddingForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
