Edited git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -339,3 +339,6 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 *.cache
+Project/.vs/Waterfall PRJ/v16/.suo
+Project/.vs/Waterfall PRJ/v16/.suo
+*.cache
