--- a/Project/Waterfall PRJ/Waterfall PRJ.csproj
+++ b/Project/Waterfall PRJ/Waterfall PRJ.csproj
@@ -140,6 +140,8 @@
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\dbControler.cs" />
+    <Compile Include="Resources\SignIn.cs" />
     <Compile Include="Shift.cs" />
     <Compile Include="ShiftManager.cs" />
     <EmbeddedResource Include="EmployeeInformation.resx">
