Adding NewType of Employee
Hi guys last time i did manage to fix the read and updating the employee to the database. But there's a small issue which is to read the current updated employee on the list box can anyone help me with that?? :)

--- a/.gitignore
+++ b/.gitignore
@@ -345,3 +345,7 @@ Project/.vs/Waterfall PRJ/v16/.suo
 *.cache
 Project/.vs/Waterfall PRJ/v16/.suo
 *.exe
+Project/.vs/Waterfall PRJ/v16/.suo
+*.exe
+Project/Waterfall PRJ/bin/Debug/Waterfall PRJ.pdb
+*.pdb
