--- a/Project/Waterfall PRJ/Waterfall PRJ.csproj
+++ b/Project/Waterfall PRJ/Waterfall PRJ.csproj
@@ -108,16 +108,17 @@
   <ItemGroup>
     <Compile Include="Administrator.cs" />
     <Compile Include="BirthDateException.cs" />
-    <Compile Include="dbControler.cs" />
+    <Compile Include="dbEmployees.cs" />
     <Compile Include="EmployeeInformation.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="EmployeeInformation.Designer.cs">
       <DependentUpon>EmployeeInformation.cs</DependentUpon>
     </Compile>
-    <Compile Include="EmployeeRole.cs" />
-    <Compile Include="EmployeeManager.cs" />
-    <Compile Include="FloorManagerRole.cs" />
+    <Compile Include="FloorStaff.cs" />
+    <Compile Include="EmployeeManagement.cs" />
+    <Compile Include="FloorManager.cs" />
+    <Compile Include="Goods.cs" />
     <Compile Include="Login.cs" />
     <Compile Include="ManagementForm.cs">
       <SubType>Form</SubType>
@@ -138,12 +139,20 @@
       <DependentUpon>EmployeeAddingForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MedBazzar.cs" />
-    <Compile Include="Person.cs" />
+    <Compile Include="Employee.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shift.cs" />
-    <Compile Include="ShiftManager.cs" />
+    <Compile Include="ShiftManagement.cs" />
     <Compile Include="ShiftType.cs" />
+    <Compile Include="StockForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StockForm.Designer.cs">
+      <DependentUpon>StockForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="WarehouseManager.cs" />
+    <Compile Include="WarehouseStaff.cs" />
     <EmbeddedResource Include="EmployeeInformation.resx">
       <DependentUpon>EmployeeInformation.cs</DependentUpon>
     </EmbeddedResource>
