Removing old Login Page
Login page with txt file :)

--- a/.gitignore
+++ b/.gitignore
@@ -349,3 +349,4 @@ Project/.vs/Waterfall PRJ/v16/.suo
 *.exe
 Project/Waterfall PRJ/bin/Debug/Waterfall PRJ.pdb
 *.pdb
+Project/.vs/Waterfall PRJ/v16/.suo
