CRUD Goods (still not done yet)

--- a/.gitignore
+++ b/.gitignore
@@ -350,3 +350,9 @@ Project/.vs/Waterfall PRJ/v16/.suo
 Project/Waterfall PRJ/bin/Debug/Waterfall PRJ.pdb
 *.pdb
 Project/.vs/Waterfall PRJ/v16/.suo
+Project/.vs/Waterfall PRJ/v16/.suo
+*.exe
+*.pdb
+Project/Waterfall PRJ/obj/Debug/Waterfall PRJ.exe
+*.exe
+*.pdb
