--- a/Project/Waterfall PRJ/Waterfall PRJ.csproj
+++ b/Project/Waterfall PRJ/Waterfall PRJ.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Administrator.cs" />
     <Compile Include="BirthDateException.cs" />
     <Compile Include="dbEmployees.cs" />
+    <Compile Include="dbGoods.cs" />
     <Compile Include="EmployeeInformation.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -118,7 +119,8 @@
     <Compile Include="FloorStaff.cs" />
     <Compile Include="EmployeeManagement.cs" />
     <Compile Include="FloorManager.cs" />
-    <Compile Include="Goods.cs" />
+    <Compile Include="Good.cs" />
+    <Compile Include="GoodManagement.cs" />
     <Compile Include="ManagementForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -174,6 +176,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="StockForm.resx">
+      <DependentUpon>StockForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
