Edit few stuff (Employee and Stock)

--- a/.gitignore
+++ b/.gitignore
@@ -360,3 +360,8 @@ Project/Waterfall PRJ/obj/Debug/Waterfall PRJ.exe
 *.pdb
 *.exe
 *.pdb
+Project/.vs/Waterfall PRJ/v16/.suo
+*.exe
+*.pdb
+*.exe
+*.pdb
