--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,8 @@ Project/.vs/Waterfall PRJ/v16/.suo
 *.pdb
 *.exe
 *.pdb
+Project/.vs/Waterfall PRJ/v16/.suo
+*.pdb
+*.exe
+*.pdb
+Project/.vs/Waterfall PRJ/v16/.suo
