--- a/Project/Waterfall PRJ/Waterfall PRJ.csproj
+++ b/Project/Waterfall PRJ/Waterfall PRJ.csproj
@@ -141,8 +141,20 @@
     </Compile>
     <Compile Include="MedBazzar.cs" />
     <Compile Include="Employee.cs" />
+    <Compile Include="ProceedStockRequest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProceedStockRequest.Designer.cs">
+      <DependentUpon>ProceedStockRequest.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StockRequest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StockRequest.Designer.cs">
+      <DependentUpon>StockRequest.cs</DependentUpon>
+    </Compile>
     <Compile Include="Shift.cs" />
     <Compile Include="ShiftManagement.cs" />
     <Compile Include="ShiftType.cs" />
