trying to make request

--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,8 @@ Project/.vs/Waterfall PRJ/v16/.suo
 *.exe
 *.pdb
 Project/.vs/Waterfall PRJ/v16/.suo
+Project/.vs/Waterfall PRJ/v16/.suo
+*.csproj
+*.resx
+*.csproj
+*.csproj
