re-Construct the logic layer

--- a/.gitignore
+++ b/.gitignore
@@ -375,3 +375,6 @@ Project/.vs/Waterfall PRJ/v16/.suo
 *.csproj
 *.csproj
 Project/.vs/Waterfall PRJ/v16/.suo
+ReConstruct/MediaBazzar/MediaBazzar/App.config
+Project/.vs/Waterfall PRJ/v16/.suo
+*.config
