--- a/.gitignore
+++ b/.gitignore
@@ -378,3 +378,4 @@ Project/.vs/Waterfall PRJ/v16/.suo
 ReConstruct/MediaBazzar/MediaBazzar/App.config
 Project/.vs/Waterfall PRJ/v16/.suo
 *.config
+ReConstruct/MediaBazzar/MediaBazzar/AddRmvProductForm.Designer.cs
