--- a/.gitignore
+++ b/.gitignore
@@ -379,3 +379,4 @@ ReConstruct/MediaBazzar/MediaBazzar/App.config
 Project/.vs/Waterfall PRJ/v16/.suo
 *.config
 ReConstruct/MediaBazzar/MediaBazzar/AddRmvProductForm.Designer.cs
+Project/.vs/Waterfall PRJ/v16/.suo
