--- a/.gitignore
+++ b/.gitignore
@@ -380,3 +380,8 @@ Project/.vs/Waterfall PRJ/v16/.suo
 *.config
 ReConstruct/MediaBazzar/MediaBazzar/AddRmvProductForm.Designer.cs
 Project/.vs/Waterfall PRJ/v16/.suo
+Project/Waterfall PRJ/bin/Debug/Waterfall PRJ.exe
+*.exe
+*.pdb
+*.exe
+*.pdb
